<resources>
    <string name="app_name">MoviesApp</string>
    <string name="i_am_the_title">i am the title</string>
    <string name="moviesposter">moviesPoster</string>
    <string name="released_date">Releaseddate</string>
    <string name="rating">Rating</string>
    <string name="separatorReleaseAndRating">|</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="download">Download</string>
    <string name="favourites">Favourites</string>
    <string name="comingsoon">Comingsoon</string>
    <string name="downloads">Downloads</string>
    <string name="search2">Search</string>
    <string name="movies">Movies</string>
    <string name="search_for_a_movie">Search for a movie</string>
    <string name="search_for_a_movie2">Search for a movie</string>
    <string name="moviename">movieName</string>
    <string name="image_poster">image_poster</string>
    <string name="released_date2">Released Date</string>
    <string name="ratingmovie">RatingMovie</string>
    <string name="overview">Overview</string>
    <string name="here_overview_of_movie_will_be_set">here overview of movie will be set</string>
    <string name="no_internet_available">No internet available</string>
    <string name="no_internet_connection">No Internet Connection</string>
</resources>