<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        android:background="@drawable/frame_shape">

    <ImageView
        android:id="@+id/movie_id"
        android:layout_width="73dp"
        android:layout_height="95dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"/>
</androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moviesInformationLayout"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/movie_title"
            android:text="@string/i_am_the_title"
            android:layout_marginTop="5dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/Released_date"
                android:layout_height="wrap_content"
                android:textColor="#474444"
                android:fontFamily="@font/opensansregular"
                android:text="@string/released_date"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#474444"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/opensansregular"
                android:textStyle="bold"
                android:text="@string/separatorReleaseAndRating"/>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/Rating"
                android:layout_marginStart="3dp"
                android:textColor="#474444"
                android:fontFamily="@font/opensansregular"
                android:layout_height="wrap_content"
                android:text="@string/rating"/>
        </LinearLayout>



    </LinearLayout>










</LinearLayout>